ADD Install a new Netbeans nightly copy and move the older links 1 day to the past complete rewrite!